Deleted content in cells

--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,19 @@
 
             <table class="table">
                 <tr>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>o</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
                 <tr>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>x</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
                 <tr>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>x</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
             </table>
 
