--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
             <h1 class="text">x<span class="textSpec"> vs </span>o</h1>
 
-            <table class="table">
+            <table class="table" data-table>
                 <tr>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>o</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
                 <tr>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>x</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
                 <tr>
-                    <td class="cell" data-cell>o</td>
-                    <td class="cell" data-cell>x</td>
-                    <td class="cell" data-cell>x</td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
+                    <td class="cell" data-cell></td>
                 </tr>
             </table>
 
