--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <h1 class="text">x<span class="textSpec"> vs </span>o</h1>
 
-            <table class="table" data-table>
+            <table class="table">
                 <tr>
                     <td class="cell" data-cell></td>
                     <td class="cell" data-cell></td>
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <td class="cell" data-cell></td>
-                    <td class="cell" data-cell></td>
+                    <td class="cell selected" data-cell></td>
                     <td class="cell" data-cell></td>
                 </tr>
                 <tr>
