--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <td class="cell" data-cell></td>
-                    <td class="cell selected" data-cell></td>
+                    <td class="cell" data-cell></td>
                     <td class="cell" data-cell></td>
                 </tr>
                 <tr>
