--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <h1 class="footer">Created by <a target="_blank" href="https://github.com/LefkaLefka">Lefka</a></h1>
         </div>
 
-        <script src="../node_modules/jquery/dist/jquery.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <!--<script src="../node_modules/jquery/dist/jquery.js"></script>-->
         <script src="../build/js/main.js"></script>
     </body>
 </html>
